--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,8 @@
 ---
-
+import Layout from "../components/Layout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-		
-	</body>
-</html>
+<Layout pageTitle="Pagina Inicial" pageDescription="Esta es una pagina para ofrecer servicios para ofrecer servicios de desarrollo">
+  <h1>Home Page</h1>
+  <p>Bienvenido a mi blog</p>
+</Layout>
