--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -7,7 +7,7 @@ interface Props {
 const { title = "Default title", content = "Content default" } = Astro.props;
 ---
 
-<div class="card">
+<div class="bg-sky-500 p-4 m-2 mb-3">
   <h1>{title}</h1>
   <p>{content}</p>
 </div>
